--- a/mock_server/code/app/package.json
+++ b/mock_server/code/app/package.json
@@ -24,8 +24,10 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "jquery": "^3.1.1",
+    "material-ui": "^0.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
