--- a/mock_server/code/myapp_2/package.json
+++ b/mock_server/code/myapp_2/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "webpack-dev-server --hot --inline --port 3000",
-    "start": "node ./bin/www"
+    "build": "webpack-dev-server --hot --inline --port 3030",
+    "start": "babel-node ./bin/www"
   },
   "dependencies": {
     "antd": "^2.10.1",
@@ -40,6 +40,7 @@
     "less-loader": "^4.0.3",
     "react": "^15.5.4",
     "react-dom": "^15.4.0",
+    "react-hot-loader": "^1.3.1",
     "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
