--- a/mock_server/code/myapp_配置页面/package.json
+++ b/mock_server/code/myapp_配置页面/package.json
@@ -39,6 +39,7 @@
     "file-stream-rotator": "0.0.6",
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^7.2.1",
     "moment": "^2.18.1",
     "morgan": "^1.7.0",
