--- a/mock_server/code/myapp_配置页面/package.json
+++ b/mock_server/code/myapp_配置页面/package.json
@@ -37,11 +37,13 @@
     "express-session": "^1.12.1",
     "fastclick": "^1.0.6",
     "file-stream-rotator": "0.0.6",
+    "fs": "^0.0.1-security",
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.2.1",
     "moment": "^2.18.1",
+    "mongodb": "^2.2.30",
     "morgan": "^1.7.0",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
