--- a/mock_server/code/myapp_配置页面/package.json
+++ b/mock_server/code/myapp_配置页面/package.json
@@ -42,6 +42,7 @@
     "isomorphic-style-loader": "^1.1.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.2.1",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.18.1",
     "mongodb": "^2.2.30",
     "morgan": "^1.7.0",
