--- a/mock_server/code/myapp/package.json
+++ b/mock_server/code/myapp/package.json
@@ -3,8 +3,7 @@
   "description": "有道智选发布系统 2017 新版",
   "version": "0.0.1",
   "keywords": [
-    "youdao",
-    "有道",
+    "yoouuddaaoo",
     "智选",
     "dsp",
     "ant",
